--- a/index.html
+++ b/index.html
@@ -2,24 +2,72 @@
 <html lang="en">
   <head>    
     <meta name="charset" content="UTF-8">
-    <title>Tic Tac Toe</title>
+    <title>Tic-Tac-Toe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link href="assets/styles.css" rel="stylesheet">
   </head>
 
   <body>
+    <div class="modal-background">
+      <div class="modal-wrapper">
+        <div class="modal">
+          <div class="modal-header">
+            <h3>Game mode</h3>
+          </div>
+          <ul class="modal-body">
+            <li><a class="game-mode" href="#">vs P2</a></li>
+            <li><a class="game-mode" href="#">vs CPU (Easy)</a></li>
+            <li><a class="game-mode" href="#">vs CPU (Normal)</a></li>
+            <li><a class="game-mode" href="#">vs CPU (Master)</a></li>
+          </ul>
+          <div class="modal-footer">
+            <button>Start</button> <button>Cancel</button>
+          </div>
 
-    <div class="board">
-      <button class="cell" id="cell_0" data-index="0">0</button>
-      <button class="cell" id="cell_1" data-index="1">1</button>
-      <button class="cell" id="cell_2" data-index="2">2</button><br>
-      <button class="cell" id="cell_3" data-index="3">3</button>
-      <button class="cell" id="cell_4" data-index="4">4</button>
-      <button class="cell" id="cell_5" data-index="5">5</button><br>
-      <button class="cell" id="cell_6" data-index="6">6</button>
-      <button class="cell" id="cell_7" data-index="7">7</button>
-      <button class="cell" id="cell_8" data-index="8">8</button>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="header">
+        <div class="match-info">
+
+          <div class="player-info p1-info">
+            <div class="player-name">P1<i class="fas fa-times marker"></i></div>
+            <div class="score p1-score">20</div>
+          </div>
+
+
+          <div class="player-info p2-info">
+            <div class="player-name"><i class="far fa-circle marker"></i> P2</div>
+            <div class="score p2-score">20</div>
+          </div>
+        </div>
+
+      </div>
+      <div class="main">
+        <table class="board">
+          <tr>            
+            <td><div class="cell" id="cell_0" data-index="0">0</div></td>
+            <td><div class="cell" id="cell_1" data-index="1">1</div></td>
+            <td><div class="cell" id="cell_2" data-index="2">2</div></td>
+          </tr>
+          <tr>    
+            <td><div class="cell" id="cell_3" data-index="3">3</div></td>
+            <td><div class="cell" id="cell_4" data-index="4">4</div></td>
+            <td><div class="cell" id="cell_5" data-index="5">5</div></td>
+          </tr>
+          <tr>    
+            <td><div class="cell" id="cell_6" data-index="6">6</div></td>
+            <td><div class="cell" id="cell_7" data-index="7">7</div></td>
+            <td><div class="cell" id="cell_8" data-index="8">8</div></td>
+          </tr>
+        </table>
+        <div class="status">
+        <i class="fas fa-times"></i> <span class="status-message">Your turn</span>
+        </div>
+      </div>
     </div>
 
     <script src="assets/script.js"></script>
