--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <h3>Game mode</h3>
           </div>
           <ul class="modal-body">
-            <li><a class="game-mode" href="#">vs P2</a></li>
-            <li><a class="game-mode" href="#">vs CPU (Easy)</a></li>
-            <li><a class="game-mode" href="#">vs CPU (Normal)</a></li>
-            <li><a class="game-mode" href="#">vs CPU (Master)</a></li>
+            <li><a class="game-mode selected" id="p2" href="#">vs P2</a></li>
+            <li><a class="game-mode" id="easy" href="#">vs CPU (Easy)</a></li>
+            <li><a class="game-mode" id="medium" href="#">vs CPU (Medium)</a></li>
+            <li><a class="game-mode" id="master" href="#">vs CPU (Master)</a></li>
           </ul>
           <div class="modal-footer">
-            <button>Start</button> <button>Cancel</button>
+            <button id="proceed-create">Start</button> <button id="cancel-create">Cancel</button>
           </div>
 
         </div>
@@ -34,14 +34,18 @@
         <div class="match-info">
 
           <div class="player-info p1-info">
-            <div class="player-name">P1<i class="fas fa-times marker"></i></div>
-            <div class="score p1-score">20</div>
+            <div class="player-name">
+              <span id="p1-name">P1</span>
+              <i class="fas fa-times marker"></i></div>
+            <div class="score" id="p1-score">0</div>
           </div>
 
 
           <div class="player-info p2-info">
-            <div class="player-name"><i class="far fa-circle marker"></i> P2</div>
-            <div class="score p2-score">20</div>
+            <div class="player-name">
+              <i class="far fa-circle marker"></i>
+              <span id="p2-name">P2</span></div>
+            <div class="score" id="p2-score">0</div>
           </div>
         </div>
 
@@ -65,7 +69,7 @@
           </tr>
         </table>
         <div class="status">
-        <i class="fas fa-times"></i> <span class="status-message">Your turn</span>
+          <span id="active-marker"></span> <span id="status-message"></span>
         </div>
       </div>
     </div>
