Launch game uninitialized

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="modal-background">
+    <div class="modal-background hidden">
       <div class="modal-wrapper">
         <div class="modal">
           <div class="modal-header">
@@ -53,23 +53,23 @@
       <div class="main">
         <table class="board">
           <tr>            
-            <td><div class="cell" id="cell_0" data-index="0">0</div></td>
-            <td><div class="cell" id="cell_1" data-index="1">1</div></td>
-            <td><div class="cell" id="cell_2" data-index="2">2</div></td>
+            <td><div class="cell highlight" id="cell_0" data-index="0">T</div></td>
+            <td><div class="cell" id="cell_1" data-index="1">I</div></td>
+            <td><div class="cell" id="cell_2" data-index="2">C</div></td>
           </tr>
           <tr>    
-            <td><div class="cell" id="cell_3" data-index="3">3</div></td>
-            <td><div class="cell" id="cell_4" data-index="4">4</div></td>
-            <td><div class="cell" id="cell_5" data-index="5">5</div></td>
+            <td><div class="cell highlight" id="cell_3" data-index="3">T</div></td>
+            <td><div class="cell" id="cell_4" data-index="4">A</div></td>
+            <td><div class="cell" id="cell_5" data-index="5">C</div></td>
           </tr>
           <tr>    
-            <td><div class="cell" id="cell_6" data-index="6">6</div></td>
-            <td><div class="cell" id="cell_7" data-index="7">7</div></td>
-            <td><div class="cell" id="cell_8" data-index="8">8</div></td>
+            <td><div class="cell highlight" id="cell_6" data-index="6">T</div></td>
+            <td><div class="cell" id="cell_7" data-index="7">O</div></td>
+            <td><div class="cell" id="cell_8" data-index="8">E</div></td>
           </tr>
         </table>
         <div class="status">
-          <span id="active-marker"></span> <span id="status-message"></span>
+          <span id="active-marker"></span> <span id="status-message">Welcome!</span>
         </div>
       </div>
     </div>
