Change theme to dark

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     </div>
     <div class="container">
       <div class="header">
+
+        <div class="github"><a href="https://github.com/nmacawile/js-tic-tac-toe" target="_blank" title="Link to repo"><i class="fab fa-github"></i></a></div>
         <div class="match-info">
 
           <div class="player-info p1-info">
